apps/wakapi/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wakapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wakapi
  template:
    metadata:
      labels:
        app: wakapi
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: veirt.dev/node-pool
                    operator: In
                    values:
                      - vps
      tolerations:
        - key: "veirt.dev/node-pool"
          operator: "Equal"
          value: "vps"
          effect: "NoSchedule"
      containers:
        - name: wakapi
          image: ghcr.io/muety/wakapi:2.17.6
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: 128Mi
            limits:
              memory: 256Mi
          volumeMounts:
            - name: data-volume
              mountPath: /data
              subPath: wakapi
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-pvc
