apps/wakapi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wakapi-service
spec:
  selector:
    app: wakapi
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
