apps/wakapi/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wakapi-ingress
  annotations:
    traefik.ingress.k8s.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  rules:
    - host: wakapi.solveir.icu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wakapi-service
                port:
                  number: 3000
  tls:
    - hosts:
        - wakapi.solveir.icu
      secretName: wakapi-tls
